--- a/VueDemo/package.json
+++ b/VueDemo/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "element-ui": "^2.13.0",
     "mint-ui": "^2.2.13",
     "pubsub-js": "^1.7.0",
     "vue": "^2.5.2",
